cabin/style/screen.styl
@import nib
@import default
@import util

cabin_black = #2b2b2b
cabin_grey_dark = #929292
cabin_grey_med = #d2d2d2
cabin_grey_light = #f2f2f2
cabin_mustard = #edbc13
cabin_bronze = #ab9960
default_tap_highlight_color = rgba(26, 26, 26, 0.3)
body_font = ProximaNova, Helvetica Neue, Helvetica, sans-serif
headline_font = 'YWFT Ultramagnetic Light'  // XXX backup?
headline_size = 30px
headline_lh = 1.33
headline_height = headline_size * headline_lh
button_height = 28px


// Common  {{{1
// Site-wide defaults and functions  {{{2

body
  color: cabin_black
  font: 13px/1.23 body_font

.main .content
  clearfix()
  margin: 0 auto

a
  text-decoration: none

.headline-text
  font: headline_size/headline_lh headline_font
  text-transform: uppercase

.small-header-text
  font-weight: bold
  text-transform: uppercase

.dim-text
  color: cabin_grey_dark
  font-size: 13px
  font-weight: normal

body-text()
  font: 14px/1.3 body_font

mini-text()
  light-text()
  background: cabin_black
  color: cabin_grey_dark
  font-size: 11px
  font-weight: normal
  text-transform: uppercase

.thin-text
  font-weight: normal

h1
  @extend .headline-text
  margin: 30px 0

button, .button, .button-arrow
  @extend .small-header-text
  background: cabin_grey_light
  border: none
  border-radius: 2px
  color: cabin_black
  display: inline-block
  line-height: button_height - 2px
  padding: button_height - @line-height 12px 0
  white-space: nowrap
  &[type="submit"]
    light-text()
    background: cabin_black
    color: white
  &:hover
    light-text()
    background: cabin_bronze
    color: white
.button-arrow
  padding-right: 26px
  position: relative
  &:after
    absolute: right 12px top; bottom 0
    background-position: center center
    background-repeat: no-repeat
    content: ""
    display: block

// <div class="loading-dots"><b></b><b></b><b></b></div>
.loading-dots
  font: bold 40px/10px ProximaNova
  color: cabin_grey_med
  b
    animation-name: loading-dots
    animation-delay: 0
    animation-duration: 1s
    animation-timing-function: steps(1)
    animation-iteration-count: infinite
    &:before
      content: "·"
      display: inline-block
  b:nth-child(2)
    animation-delay: 200ms
  b:nth-child(3)
    animation-delay: 400ms
@keyframes loading-dots
  from
    color: cabin_bronze
  20%
    color: cabin_grey_med


// Set the overall page width either to a max value (if passed a single
// argument) or bounded between min and max widths (with two arguments).
page-width(args...)
  nav, .content, footer
    if length(args) == 1
      max-width: args[0]
    else
      min-width: args[0]
      max-width: args[1]

// Lazy man's custom checkboxes; applying these styles allows styling the input
// element as a normal element on WebKit browsers. Falls back to a normal
// checkbox in other browsers. If we need to support other browsers later,
// another option would be display: none on the checkbox, and then use sibling
// selectors to style a label.
custom-checkbox()
  -webkit-appearance: none
  border-radius: 0
  border: none
  cursor: pointer

hover-hr(duration = 200ms)
  position: relative
  hr
    absolute: top left
    background: cabin_bronze
    border: none
    margin: 0
    size: 0 1px
    transition: width duration
  .no-touch &:hover hr, &.selected hr
    width: 100%
  &.selected hr
    background: cabin_black


// Apply centered text on top of a horizontal rule, with padding. For example:
//
//     <h1><span>My heading</span></h1>
//
//     h1
//       rule-behind(span)
//
// Renders:
// ------- My heading -------
//
rule-behind(text_container_element, color = cabin_black)
  overflow: hidden
  text-align: center
  & > {text_container_element}
/* ... */

